<resources>
  <string name="app_name">MaestroRouter</string>
  <string name="user_name">Username</string>
  <string name="login">Login</string>
  <string name="dashboard">Dashboard</string>
  <string name="quick_setup">Quick Setup</string>
  <string name="connected_device">Connected devices</string>
  <string name="network">Network</string>
  <string name="wifi_setting">Wifi Settings</string>
  <string name="vpn_setting">VPN Settings</string>
</resources>
